--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <i class="fa-li fa fa-graduation-cap"></i>
                     <div class="description">
                       <p class="course">M.Sc. in Electrical Engineering, 2011</p>
-                      <p class="institution">Linkoping University</p>
+                      <p class="institution">Link&#246;ping University</p>
                     </div>
                   </li>
                 </ul>
@@ -225,7 +225,7 @@
 
                       <span style="font-size:85%" class="pub-authors">
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">T. Ahmed</span>
+                          <span itemprop="name"><u>T. Ahmed</u></span>
                         </span>, 
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">J. M. K&#252;hn</span>
@@ -250,7 +250,7 @@
                           <span itemprop="name">K. Namura</span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">J. M. Kuhn</span>
+                          <span itemprop="name">J. M. K&#252;hn</span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">T. Adachi</span>
@@ -313,7 +313,7 @@
                           <span itemprop="name">A. Takahashi</span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">T. Ahmed</span>
+                          <span itemprop="name"><u>T. Ahmed</u></span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">Y. Doi</span>
@@ -345,7 +345,7 @@
                           <span itemprop="name">B. Vogel</span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">T. Ahmed</span>
+                          <span itemprop="name"><u>T. Ahmed</u></span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">W. Luk</span>
@@ -366,10 +366,10 @@
 
                       <span style="font-size:85%" class="pub-authors">
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">T. Ahmed</span>
+                          <span itemprop="name"><u>T. Ahmed</u></span>
                         </span>, 
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">J. M. Kuhn</span>
+                          <span itemprop="name">J. M. K&#252;hn</span>
                         </span>,
                       </span>
 
