fixed memory to member

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           </div>
           <div class="col-xs-10 col-md-8" itemprop="description">
             <h1 id="biography">Biography</h1>
-            <p>I am a researcher in the School of Engineering at Tokyo Institute of Technology and a memory of Hara laboratory. My research interests are in the broad aspects of computer systems, focusing on high performance, energy efficiency, and reliability of general-purpose computer architectures, domain-specific accelerators, and highly reconfigurable architectures. Recently, I became interested in machine learning for electronic design automation (EDA) optimization.
+            <p>I am a researcher in the School of Engineering at Tokyo Institute of Technology and a member of Hara laboratory. My research interests are in the broad aspects of computer systems, focusing on high performance, energy efficiency, and reliability of general-purpose computer architectures, domain-specific accelerators, and highly reconfigurable architectures. Recently, I became interested in machine learning for electronic design automation (EDA) optimization.
             </p>
             <p>
             Before joining TokyoTech, I spent several years in industries (Fujitsu laboratories ltd, Preferred Networks, Inc., and Edgecortix, Inc.), where I was involved in designing and developing machine learning and neuromorphic accelerators. 
