--- a/index.html
+++ b/index.html
@@ -164,10 +164,12 @@
               <div class="col-sm-6">
                 <h3>Interests</h3>
                 <ul class="ul-interests">
-                  <li>Domain specific accelerator (e.g., machine learning)</li>
-                  <li>Reconfigurable architecture (FPGA and CGRA)</li>
-                  <li>Hardware software co-design</li>
-                  <li>Machine learning for compiler and EDA optimization</li>
+                  <font size="-1">
+                    <li>Domain specific accelerator (e.g., machine learning)</li>
+                    <li>Reconfigurable architecture (FPGA and CGRA)</li>
+                    <li>Hardware software co-design</li>
+                    <li>Machine learning for compiler and EDA optimization</li>
+                  </font>
                 </ul>
               </div>
 
